<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_national_insurance_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_drawable"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_national_insurance_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/national_insurance_number"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/cb_waiting_NIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="@string/i_am_waiting_to_receive_my_national_insurance_number"
                android:textColor="@color/colorWhite"
                android:theme="@style/MyCheckBox" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/lato_regular"
                android:text="@string/finance_year_to_date_situation"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_date_situation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_first_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/this_is_my_first_job_since_last_6_april_and_i_have_nnot_been_receiving_taxable_jobseeker_s_nallowance_employment_and_support_nallowance_taxable_incapicity_benifit_state_nor_occupational_pension"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/rb_only_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/this_is_now_my_only_job_since_last_6_april_and_i_nhave_had_another_job_or_received_taxable_njobseeker_s_allowance_employment_and_nsupport_allowance_taxable_incapicity_nbenifit_i_do_not_receive_state_or_occupational_pension"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/rb_another_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/i_have_another_job_or_receive_state_or_noccupational_pension"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_05"
                android:background="@color/colorGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:fontFamily="@font/lato_regular"
                android:text="@string/student_loan"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_student_loan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_05"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_no_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_05"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/i_do_not_have_a_student_loan"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/rb_one_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_05"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/i_have_a_plan_1_student_loan_before_n_september_2012"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />

                <RadioButton
                    android:id="@+id/rb_two_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_05"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/i_have_a_plan_2_student_loan_after_september_2012"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/MyCheckBox" />
            </RadioGroup>


            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="@color/colorPink"
                app:mrl_rippleDelayClick="true"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_signup_finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/finish"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>