<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_drawable"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_search_fragment"
            android:drawableEnd="@drawable/ic_next_arrow"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/type_search_keyword"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_15" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/lato_regular"
            android:text="@string/recommended"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/showMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/show_more"
            android:textColor="@color/colorPrimary" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:fontFamily="@font/lato_regular"
            android:text="@string/categories"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>