<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_business_signup_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_drawable"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_business_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/sp_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_business_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="@dimen/sp_18" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:theme="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_business_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textSize="@dimen/sp_18" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_signupbusiness_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_15"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/colorWhite" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple_signupbusiness_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_signupbusiness_signin"
            android:layout_marginBottom="@dimen/dp_15"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="@color/colorPink"
            app:mrl_rippleDelayClick="true"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signupbusiness_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/lato_regular"
                android:text="@string/_continue"
                android:textColor="@color/colorBlack" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_signupbusiness_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ripple_signupbusiness_continue"
            android:layout_marginBottom="@dimen/dp_15"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/by_tapping_continue_you_agree_to_the_terms_n_amp_conditions_and_privacy_policy"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>
</LinearLayout>